--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -31,7 +31,8 @@ pre {
     line-height: 1.3;
 }
 .mediumnavigation {
-	background: #fff;
+	background: #277c80;
+	color: #fff;
         transition: top 0.5s ease-in-out;
         padding: 1.5rem 1rem;
         box-shadow: 0px 10px 40px 0px rgba( 0, 0, 0, 0.05 );
