--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-VSEH0SRM9F');
+  gtag('config', '');
 </script>
 
 <meta charset="utf-8">
