--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 
         <!-- Begin Logo -->
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-          <img src="/assets/images/zoonearme.png" />
+          <img src="{{ site.baseurl }}/assets/images/zoonearme.png" />
         </a>
         <!-- End Logo -->
 
