--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -281,6 +281,9 @@ span.post-name a,span.post-read-more a:hover {
 	margin-left:3px;
 	margin-right:3px;
 }
+.mediumnavigation {
+    border-bottom: white 1px solid;
+}
 .mediumnavigation .form-control {
 	font-size:0.8rem;
 	border-radius:30px;
@@ -333,7 +336,7 @@ span.post-name a,span.post-read-more a:hover {
 	margin-bottom:1rem;
 }
 .intro {
-    background-color: #171E27;
+    background-color: #277C80;
     padding: 3rem 0;
     margin-top: -55px;
     margin-bottom: 3.5rem;
