--- a/_includes/recommended.html
+++ b/_includes/recommended.html
@@ -1,7 +1,7 @@
 
   <div class="sidebar-section">
-     <h5><span>Recommended for Lawn Bowls Beginners</span></h5>
+     <h5><span>Recommended Reading:</span></h5>
     <ul style="list-none;">      
-        <li><a href="{{ site.baseurl }}/lawn-bowls/best-lawn-bowls-for-beginners">Best Lawn Bowls For Beginners</a></li>
+        <li><a href="{{ site.baseurl }}#">Best Zoos In Michigan</a></li>
     </ul>
 </div>
