--- a/_includes/recommended.html
+++ b/_includes/recommended.html
@@ -1,6 +1,6 @@
 
   <div class="sidebar-section">
-     <h5><span>Recommended Reading:</span></h5>
+     <h5><span>Best Zoos By State</span></h5>
     <ul style="list-none;">      
         <li><a href="{{ site.baseurl }}#">Best Zoos In Michigan</a></li>
     </ul>
