--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
                   <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/about-us">About</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/about-me">About</a>
                 </li>
             </ul>
             <!-- End Menu -->
@@ -122,7 +122,7 @@
 			<div class="footer-widget">
                 <h5 class="title">About {{ site.name }}</h5>
                 <ul>
-                <li><a href="{{ site.baseurl }}/about-us">About Me</a></li>
+                <li><a href="{{ site.baseurl }}/about-me">About Me</a></li>
                 <li><a href="{{ site.baseurl }}/affiliate-disclaimer" rel="nofollow">Affiliate Disclaimer</a></li>
                 <li><a href="{{ site.baseurl }}/terms" rel="nofollow">Terms and Conditions</a></li>
                 <li><a href="{{ site.baseurl }}/privacy" rel="nofollow">Privacy Policy</a></li>
