--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ post_class: post-template
 			</div>
 			
 			{% if page.first_paragraph %}
-			<p style="font-style: italic;">{{ page.first_paragraph }}</p>
+			<p class="intro-block">{{ page.first_paragraph }}</p>
 			{% endif %}
 			
 			<!-- Post Featured Image -->
