--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,9 @@
                   <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="{{ site.baseurl }}/zoos-by-states">All States</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ site.baseurl }}/about-me">About</a>
                 </li>
             </ul>
