--- a/_includes/recommended.html
+++ b/_includes/recommended.html
@@ -2,6 +2,7 @@
   <div class="sidebar-section">
      <h5><span>Best Zoos By State</span></h5>
     <ul style="list-none;">      
-        <li><a href="{{ site.baseurl }}#">Best Zoos In Michigan</a></li>
+        <li><a href="{{ site.baseurl }}/best-zoos-in-michigan">Best Zoos In Michigan</a></li>
+        <li><a href="{{ site.baseurl }}/zoos-by-states">All States</a></li>
     </ul>
 </div>
