--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ post_class: post-template
             </p>
 	<p>
 		<small itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-			<span itemprop="name">How To Play Sport</span>
+			<span itemprop="name">Zoo Near Me</span>
 		</small>
 
 
